shop kiosk mode progress, shop item page with venmo image

--- a/client/building.jade
+++ b/client/building.jade
@@ -18,7 +18,7 @@ template(name='building')
                 i.chevron.left.icon
                 i.building.icon
                 //- +i name='apartment' classes='ui inline mini image'
-                |Buildings
+                |buildings
             if is_dev
                 .ui.icon.input
                     i.home.icon
