--- a/client/shop.jade
+++ b/client/shop.jade
@@ -1,4 +1,4 @@
-template(name='shop')
+template(name='shop_dashboard')
     .ui.stackable.padded.grid
         .three.wide.column
             .ui.header 
@@ -146,7 +146,7 @@ template(name='add_to_tab')
 
 
 
-template(name='shop_card')
+template(name='shop_card_template')
     .ui.card
         a.pointer(href="/shop/#{_id}/view")
             img.ui.centered.rounded.image(src="{{c.url picture width=300 height=200 crop='fit'}}")
