--- a/client/styles.css
+++ b/client/styles.css
@@ -36,18 +36,18 @@ body {
 
 .red_flagged {
   border: 5px solid red !important;
-  /* border-radius: 10px !important; */
+  /* border-radius: 5px !important; */
   box-shadow: 0 4px 8px 0 rgb(220,20,60, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
 }
 
 .yellow_flagged {
   border: 5px solid orange !important;
-  /* border-radius: 10px !important; */
+  /* border-radius: 5px !important; */
 }
 
 .green_flagged {
   border: 5px solid green;
-  /* border-radius: 10px; */
+  /* border-radius: 5px; */
 }
 
 .abril{
@@ -91,20 +91,20 @@ input{
     margin-top: 3px !important;
     /* -moz-border-radius: 50px !important; */
     /* border-radius: 50px !important;
-    /* -webkit-border-radius: 10px !important; */
-    /* -moz-border-radius: 10px !important; */
+    /* -webkit-border-radius: 5px !important; */
+    /* -moz-border-radius: 5px !important; */
     background: rgba(250, 250, 250, 0.9) !important;
     opacity: 1;
 }
 
 input.username_search{
     -webkit-border-radius: 25px !important; */
-    border-radius: 25px !important;
-    margin-bottom: 5px !important;
-    margin-top: 5px !important;
+    border-radius: 20px !important;
+    /* margin-bottom: 5px !important;
+    margin-top: 5px !important; */
     background: rgba(250, 250, 250, 0.9) !important;
     opacity: 1;
-    border-width: 5px !important;
+    border-width: 3px !important;
     border-color: #a67c00 !important;
     box-shadow: 0 2px 5px 2px rgba(50, 50, 100, 0.1) !important;
 }
@@ -121,9 +121,9 @@ input.username_search{
     box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.2) !important;
 }
 .button, .segment, .label{
-    /* -webkit-border-radius: 10px !important; */
-    /* -moz-border-radius: 10px !important; */
-    border-radius: 10px !important;
+    /* -webkit-border-radius: 5px !important; */
+    /* -moz-border-radius: 5px !important; */
+    border-radius: 5px !important;
 }
 
 
@@ -194,7 +194,7 @@ input.username_search{
 
 
 .button, .selector, .card{
-  animation: fadein 1s;
+  animation: fadein .75s;
 }
 @keyframes fadein {
   from { opacity: 0}
